--- a/application/package.json
+++ b/application/package.json
@@ -18,7 +18,10 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "alertifyjs": "^1.13.1",
     "bootstrap": "^5.3.0-alpha1",
+    "ngx-pagination": "^6.0.3",
+    "popper": "^1.0.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
