--- a/application/package.json
+++ b/application/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "^15.0.0",
     "bootstrap": "^5.2.3",
     "ngx-bootstrap": "^10.2.0",
+    "ngx-mask": "^13.1.13",
     "popper": "^1.0.1",
     "primeicons": "^6.0.1",
     "primeng": "^15.0.1",
